optimize user pojo and change app colors

--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue_toolbar"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ohad.babysitter.main.UserProfileActivity"
+    tools:context=".user.UserProfileActivity"
     tools:showIn="@layout/activity_user_profile">
 
     <LinearLayout
@@ -29,7 +29,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="@color/grey_mdm"/>
 
         <LinearLayout
@@ -52,7 +52,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="@color/grey_mdm"/>
 
         <LinearLayout
