--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <!--TODO: Red-->
     <color name="red">#ff0000</color>
+    <color name="red_dark">#4e0000</color>
     <color name="red_accent">#FF5252</color>
 
     <!--TODO: Green-->
@@ -20,7 +21,8 @@
     <color name="blue">#0000ff</color>
     <color name="blue_primary">#607D8B</color>
     <color name="blue_primary_dark">#455A64</color>
-    <color name="blue_toolbar">#001c2a</color>
+    <color name="blue_toolbar_light">#637109</color>
+    <color name="blue_toolbar">#b7ab26</color>
 
     <!--TODO: Grey-->
     <color name="grey">#a1a1a1</color>
