--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -6,7 +6,7 @@
     android:id="@+id/fbcContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_toolbar"
+    android:background="@color/toolbar"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".user.UserProfileActivity"
     tools:showIn="@layout/activity_user_profile">
