--- a/app/src/main/res/layout/toolbar_confirm.xml
+++ b/app/src/main/res/layout/toolbar_confirm.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/confirm_mToolbar"
         android:minHeight="?attr/actionBarSize"
-        android:background="@color/blue_toolbar"
+        android:background="@color/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
